--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3034",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "export": "next export",
