--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@mui/x-date-pickers": "^6.9.1",
     "@next/font": "^13.1.2",
     "@popperjs/core": "2.11.6",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "1.9.1",
     "apexcharts": "^3.41.1",
     "apexcharts-clevision": "3.28.5",
@@ -59,6 +61,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^10.12.4",
     "highlight.js": "^11.8.0",
+    "html2canvas": "^1.4.1",
     "i18next": "22.4.9",
     "i18next-browser-languagedetector": "7.0.1",
     "i18next-http-backend": "2.1.1",
@@ -66,6 +69,7 @@
     "isomorphic-unfetch": "^4.0.2",
     "jquery": "^3.6.3",
     "jsonwebtoken": "8.5.1",
+    "jspdf": "^2.5.1",
     "keen-slider": "6.8.5",
     "lodash": "^4.17.21",
     "next": "^13.4.7",
@@ -105,6 +109,7 @@
     "react-native-safearea-height": "^1.0.6",
     "react-naver-maps": "^0.1.2",
     "react-organizational-chart": "^2.2.1",
+    "react-pageflip": "^2.0.3",
     "react-perfect-scrollbar": "1.5.8",
     "react-popper": "2.3.0",
     "react-quill": "^2.0.0",
@@ -120,6 +125,7 @@
     "rehype-highlight": "^6.0.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
+    "sheetjs": "^2.0.0",
     "simplebar-react": "^3.2.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.9",
