--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "jquery": "^3.6.3",
     "jsonwebtoken": "8.5.1",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.6.0",
+    "jspdf-react": "^1.0.11",
     "keen-slider": "6.8.5",
     "lodash": "^4.17.21",
     "next": "^13.4.7",
